--- a/backend/package.json
+++ b/backend/package.json
@@ -4,13 +4,14 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "nodemon"
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "knex": "^3.1.0",
     "mysql2": "^3.11.0",
