--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -31,10 +31,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -89,11 +86,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "src/assets/imagens",
-                "output": "/assets"
-              }
+              "src/assets"
             ],
             "styles": [
               "src/styles.css"
@@ -103,5 +96,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
