--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "projetocomp4",
   "version": "1.0.0",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon"
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/node": "^22.5.5",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -17,5 +18,8 @@
     "knex": "^3.1.0",
     "mysql2": "^3.11.0",
     "nodemon": "^3.1.4"
+  },
+  "dependencies": {
+    "typescript": "^5.6.2"
   }
 }
