--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "nodemon": "^3.1.4"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "typescript": "^5.6.2"
   }
