--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,6 @@
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
-    "json-server": "^1.0.0-beta.2",
-    "ngx-cookie-service": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -29,6 +27,7 @@
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.7.6",
     "jasmine-core": "~5.2.0",
