--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "nodemailer": "^6.9.16",
     "typescript": "^5.6.2"
   }
 }
